--- a/index.html
+++ b/index.html
@@ -7,234 +7,7 @@
     <title></title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <style>
-      body {
-        text-align: center;
-        font-family: Arial, sans-serif;
-      }
-
-      .wrap {
-        z-index: 2;
-      }
-
-      h1 {
-        margin-top: 50px;
-      }
-
-      .scoreboard {
-        margin: 20px 0;
-      }
-
-      .choices {
-        margin: 20px 0;
-      }
-
-      .choice {
-        margin: 10px;
-        padding: 10px 20px;
-      }
-
-      #result {
-        font-weight: bold;
-        font-size: 24px;
-      }
-
-      #if-win {
-        z-index: 1;
-        display: none;
-      }
-
-      body {
-        margin: 0;
-        height: 100vh;
-        overflow: hidden;
-      }
-
-      @keyframes firework {
-        0% {
-          transform: translate(var(--x), var(--initialY));
-          width: var(--initialSize);
-          opacity: 1;
-        }
-
-        50% {
-          width: 0.5vmin;
-          opacity: 1;
-        }
-
-        100% {
-          width: var(--finalSize);
-          opacity: 0;
-        }
-      }
-
-      /* @keyframes fireworkPseudo {
-  0% { transform: translate(-50%, -50%); width: var(--initialSize); opacity: 1; }
-  50% { width: 0.5vmin; opacity: 1; }
-  100% { width: var(--finalSize); opacity: 0; }
-  }
-  */
-      .firework,
-      .firework::before,
-      .firework::after {
-        --initialSize: 0.5vmin;
-        --finalSize: 45vmin;
-        --particleSize: 0.2vmin;
-        --color1: yellow;
-        --color2: khaki;
-        --color3: white;
-        --color4: lime;
-        --color5: gold;
-        --color6: mediumseagreen;
-        --y: -30vmin;
-        --x: -50%;
-        --initialY: 60vmin;
-        content: '';
-        animation: firework 2s infinite;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, var(--y));
-        width: var(--initialSize);
-        aspect-ratio: 1;
-        background:
-            /*
-  radial-gradient(circle, var(--color1) var(--particleSize), #0000 0) 0% 0%,
-  radial-gradient(circle, var(--color1) var(--particleSize), #0000 0) 100% 0%,
-  radial-gradient(circle, var(--color1) var(--particleSize), #0000 0) 100% 100%,
-  radial-gradient(circle, var(--color1) var(--particleSize), #0000 0) 0% 100%,
-  */ radial-gradient(
-              circle,
-              var(--color1) var(--particleSize),
-              #0000 0
-            )
-            50% 0%,
-          radial-gradient(circle, var(--color2) var(--particleSize), #0000 0)
-            100% 50%,
-          radial-gradient(circle, var(--color3) var(--particleSize), #0000 0)
-            50% 100%,
-          radial-gradient(circle, var(--color4) var(--particleSize), #0000 0) 0%
-            50%,
-          /* bottom right */
-            radial-gradient(circle, var(--color5) var(--particleSize), #0000 0)
-            80% 90%,
-          radial-gradient(circle, var(--color6) var(--particleSize), #0000 0)
-            95% 90%,
-          radial-gradient(circle, var(--color1) var(--particleSize), #0000 0)
-            90% 70%,
-          radial-gradient(circle, var(--color2) var(--particleSize), #0000 0)
-            100% 60%,
-          radial-gradient(circle, var(--color3) var(--particleSize), #0000 0)
-            55% 80%,
-          radial-gradient(circle, var(--color4) var(--particleSize), #0000 0)
-            70% 77%,
-          /* bottom left */
-            radial-gradient(circle, var(--color5) var(--particleSize), #0000 0)
-            22% 90%,
-          radial-gradient(circle, var(--color6) var(--particleSize), #0000 0)
-            45% 90%,
-          radial-gradient(circle, var(--color1) var(--particleSize), #0000 0)
-            33% 70%,
-          radial-gradient(circle, var(--color2) var(--particleSize), #0000 0)
-            10% 60%,
-          radial-gradient(circle, var(--color3) var(--particleSize), #0000 0)
-            31% 80%,
-          radial-gradient(circle, var(--color4) var(--particleSize), #0000 0)
-            28% 77%,
-          radial-gradient(circle, var(--color5) var(--particleSize), #0000 0)
-            13% 72%,
-          /* top left */
-            radial-gradient(circle, var(--color6) var(--particleSize), #0000 0)
-            80% 10%,
-          radial-gradient(circle, var(--color1) var(--particleSize), #0000 0)
-            95% 14%,
-          radial-gradient(circle, var(--color2) var(--particleSize), #0000 0)
-            90% 23%,
-          radial-gradient(circle, var(--color3) var(--particleSize), #0000 0)
-            100% 43%,
-          radial-gradient(circle, var(--color4) var(--particleSize), #0000 0)
-            85% 27%,
-          radial-gradient(circle, var(--color5) var(--particleSize), #0000 0)
-            77% 37%,
-          radial-gradient(circle, var(--color6) var(--particleSize), #0000 0)
-            60% 7%,
-          /* top right */
-            radial-gradient(circle, var(--color1) var(--particleSize), #0000 0)
-            22% 14%,
-          radial-gradient(circle, var(--color1) var(--particleSize), #0000 0)
-            45% 20%,
-          radial-gradient(circle, var(--color1) var(--particleSize), #0000 0)
-            33% 34%,
-          radial-gradient(circle, var(--color1) var(--particleSize), #0000 0)
-            10% 29%,
-          radial-gradient(circle, var(--color1) var(--particleSize), #0000 0)
-            31% 37%,
-          radial-gradient(circle, var(--color1) var(--particleSize), #0000 0)
-            28% 7%,
-          radial-gradient(circle, var(--color1) var(--particleSize), #0000 0)
-            13% 42%;
-        background-size: var(--initialSize) var(--initialSize);
-        background-repeat: no-repeat;
-      }
-
-      .firework::before {
-        --x: -50%;
-        --y: -50%;
-        --initialY: -50%;
-        /*   transform: translate(-20vmin, -2vmin) rotate(40deg) scale(1.3) rotateY(40deg); */
-        transform: translate(-50%, -50%) rotate(40deg) scale(1.3) rotateY(40deg);
-        /*   animation: fireworkPseudo 2s infinite; */
-      }
-
-      .firework::after {
-        --x: -50%;
-        --y: -50%;
-        --initialY: -50%;
-        /*   transform: translate(44vmin, -50%) rotate(170deg) scale(1.15) rotateY(-30deg); */
-        transform: translate(-50%, -50%) rotate(170deg) scale(1.15)
-          rotateY(-30deg);
-        /*   animation: fireworkPseudo 2s infinite; */
-      }
-
-      .firework:nth-child(2) {
-        --x: 30vmin;
-      }
-
-      .firework:nth-child(2),
-      .firework:nth-child(2)::before,
-      .firework:nth-child(2)::after {
-        --color1: pink;
-        --color2: violet;
-        --color3: fuchsia;
-        --color4: orchid;
-        --color5: plum;
-        --color6: lavender;
-        --finalSize: 40vmin;
-        left: 30%;
-        top: 60%;
-        animation-delay: -0.25s;
-      }
-
-      .firework:nth-child(3) {
-        --x: -30vmin;
-        --y: -50vmin;
-      }
-
-      .firework:nth-child(3),
-      .firework:nth-child(3)::before,
-      .firework:nth-child(3)::after {
-        --color1: cyan;
-        --color2: lightcyan;
-        --color3: lightblue;
-        --color4: PaleTurquoise;
-        --color5: SkyBlue;
-        --color6: lavender;
-        --finalSize: 35vmin;
-        left: 70%;
-        top: 60%;
-        animation-delay: -0.4s;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="wrap">
@@ -259,72 +32,6 @@
       <div class="firework"></div>
       <div class="firework"></div>
     </div>
-
-    <script>
-      let playerScore = 0;
-      let computerScore = 0;
-      let highScore = 0;
-
-      function playGame(playerChoice) {
-        const choices = ['rock', 'paper', 'scissors'];
-        const computerChoice =
-          choices[Math.floor(Math.random() * choices.length)];
-
-        if (playerChoice === computerChoice) {
-          displayResult(`It's a tie! Computer choose: ${computerChoice}`);
-          toggleStyle('draw');
-        } else if (
-          (playerChoice === 'rock' && computerChoice === 'scissors') ||
-          (playerChoice === 'paper' && computerChoice === 'rock') ||
-          (playerChoice === 'scissors' && computerChoice === 'paper')
-        ) {
-          playerScore++;
-          highScore++;
-          displayResult(`You win! ${playerChoice} beats ${computerChoice}`);
-          updateHighScore(highScore);
-          toggleStyle('win');
-        } else {
-          computerScore++;
-          highScore = 0;
-          displayResult(`You lose! ${computerChoice} beats ${playerChoice} `);
-          updateHighScore(0);
-          toggleStyle('lose');
-        }
-
-        updateScoreboard();
-      }
-
-      function displayResult(message) {
-        const resultElement = document.getElementById('result');
-        resultElement.textContent = message;
-      }
-
-      function updateScoreboard() {
-        const playerScoreElement = document.getElementById('player-score');
-        playerScoreElement.textContent = playerScore;
-
-        const computerScoreElement = document.getElementById('computer-score');
-        computerScoreElement.textContent = computerScore;
-      }
-
-      function updateHighScore(value) {
-        highScore = value;
-        const highScoreElement = document.getElementById('hs');
-        highScoreElement.textContent = 'Your current high score:' + highScore;
-      }
-
-      function toggleStyle(value) {
-        if (value == 'win') {
-          document.body.style.backgroundColor = '#53a052';
-          document.getElementById('if-win').style.display = 'block';
-        } else if (value == 'draw') {
-          document.body.style.backgroundColor = '#8c8c8c';
-          document.getElementById('if-win').style.display = 'none';
-        } else {
-          document.body.style.backgroundColor = '#905252';
-          document.getElementById('if-win').style.display = 'none';
-        }
-      }
-    </script>
+    <script src="script.js"></script>
   </body>
 </html>
